adding appointment types

--- a/appointmentdetail1.html
+++ b/appointmentdetail1.html
@@ -35,8 +35,8 @@
 <!--- appointment information and details -->
 <div class="appointmentinformation" onload="addVaccineBrand()">
     <h3> Appointment Successfully Booked!</h3>
-    <h4>COVID-19 Vaccine Appointment Details:</h4>
-    <p class="brandheading">Vaccine Brand: <span id="vaccinebrandid"></span></p>
+    <h4>Appointment Details:</h4>
+    <p class="brandheading">Appointment Type: <span id="vaccinebrandid"></span></p>
     <script>
           document.getElementById('vaccinebrandid').innerHTML = localStorage.getItem("vaccinebrandvalue");
     </script>
