making edits to appointment type confirmations

--- a/appointments.html
+++ b/appointments.html
@@ -29,7 +29,7 @@
 <!--- appointment title and header -->
 <div class="appointmentheader">
     <h1>Appointments</h1>
-    <p>Schedule a COVID-19 vaccine, booster shot, or antibody test</p>
+    <p>Schedule a COVID-19 vaccine or COVID-19 antibody test</p>
     <form>
         <a href="makeappointment1.html">
             <button class="button" type=button>MAKE AN APPOINTMENT</button>
