--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <!--- login module -->
 <div class="login">
 	<h1 class="heading">Appointment Portal</h1>
-	<p> Enter your credentials to schedule a COVID-19 <br> vaccination, booster, or antibody test</p>
+	<p> Enter your credentials to schedule a COVID-19 <br> vaccination or COVID-19 antibody test</p>
 	<form>
 		<label for="andrewid">Andrew ID</label><br>
 		<input class="logintextfield" type="text" id="andrewid" name=andrewid><br>
