--- a/makeappointment1.html
+++ b/makeappointment1.html
@@ -36,9 +36,9 @@
 <div class="appointmentforminformation">
     <p class="appointmentformheader">Location: TCS Hall (4665 Forbes Ave, Pittsburgh, PA 15213)</p>
     <p class="appointmentformheader">Select an appointment type.</p>
-    <input type="radio" id="vaccine" name="appointmenttype" value="Vaccine">
+    <input type="radio" id="vaccine" name="appointmenttype" value="COVID-19 Vaccine">
     <label for="vaccine">Vaccine</label>
-    <input type="radio" id="test" name="appointmenttype" value="Test">
+    <input type="radio" id="test" name="appointmenttype" value="COVID-19 Antibody Test">
     <label for="test">Test</label>
     <p class="appointmentformheader">Select a vaccine brand or test version.</p>
     <input onclick="addVaccineBrand()" type="radio" id="pfizer" name="vaccinebrand" value="Pfizer Vaccine">
