--- a/appointmentdetail1.html
+++ b/appointmentdetail1.html
@@ -37,17 +37,8 @@
     <h3> Appointment Successfully Booked!</h3>
     <h4>Appointment Details:</h4>
     <p class="brandheading">Appointment Type: <span id="vaccinebrandid"></span></p>
-    <script>
-          document.getElementById('vaccinebrandid').innerHTML = localStorage.getItem("vaccinebrandvalue");
-    </script>
     <p class="dateheading">Appointment Date: <span id="dosedateid"></span> </p>
-    <script>
-          document.getElementById("dosedateid").innerHTML = localStorage.getItem("dosedatevalue");
-    </script>
     <p class="dateheading">Appointment Time: <span id="dosetimeid"></span></p>
-    <script>
-          document.getElementById("dosetimeid").innerHTML = localStorage.getItem("dosetimevalue");
-    </script>
     <h4>Test Center:</h4>
     <p class="locationheading">TCS Hall</p>
     <p>4665 Forbes Ave, Pittsburgh, PA 15213</p>
@@ -55,5 +46,6 @@
     <img class="tcsmap" src="tcs-map.png" alt="tcs map">
 </div>
 
+<script src="main3.js" type="text/javascript"></script>
 </body>
 </html>
