adding cancelling appointment functionality

--- a/makeappointment1.html
+++ b/makeappointment1.html
@@ -72,7 +72,7 @@
         </select><br><br>
     <input type="checkbox" id="vaccinebrandconfirmation" name="vaccinebrandconfirmation" value="confirmed">
     <label for="vaccinebrandconfirmation">I confirm that I have selected the following appointment: <span id="vaccinebrandresults"></span></label>
-    <input type="submit" value="Book Appointment" onclick="confirmAppointment(); setDoseDate(); setDoseTime(); setVaccineBrand();" class="formbutton">
+    <input type="submit" value="Book Appointment" onclick="confirmAppointment(); setDoseDate(); setDoseTime(); setVaccineBrand(); setLocation(); setAppointmentDetails()" class="formbutton">
 </div>
 </form>
 
