--- a/appointmentdetail1.html
+++ b/appointmentdetail1.html
@@ -34,7 +34,7 @@
 
 <!--- appointment information and details -->
 <div class="appointmentinformation" onload="addVaccineBrand()">
-    <h3> Appointment Successfully Booked!</h3>
+    <h3>You have booked the following appointment!</h3>
     <h4>Appointment Details:</h4>
     <p class="brandheading">Appointment Type: <span id="vaccinebrandid"></span></p>
     <p class="dateheading">Appointment Date: <span id="dosedateid"></span> </p>
@@ -42,7 +42,7 @@
     <h4>Test Center:</h4>
     <p class="locationheading">TCS Hall</p>
     <p>4665 Forbes Ave, Pittsburgh, PA 15213</p>
-    <p class="cancelappointment">Cancel Appointment</p>
+    <button onclick="cancelAppointment()" class="cancelappointment">Cancel Appointment</p>
     <img class="tcsmap" src="tcs-map.png" alt="tcs map">
 </div>
 
