--- a/appointments.html
+++ b/appointments.html
@@ -67,11 +67,21 @@
 </div>
 
 <div class="newappointment">
-    <span id="dosedateid"></span>
-    <span class="dosetimetable" id="dosetimeid"></span>
-    <span class="dosebrandtable" id="vaccinebrandid"></span>
-    <span class="doselocationtable">TCS Hall</span>
-    <span class="cancelappointmenttable">Cancel Appointment</span>
+    <a href="appointmentdetail1.html">
+        <span id="dosedateid"></span>
+    </a>
+    <a href="appointmentdetail1.html">
+        <span class="dosetimetable" id="dosetimeid"></span>
+    </a>
+    <a href="appointmentdetail1.html">
+        <span class="dosebrandtable" id="vaccinebrandid"></span>
+    </a>
+    <a href="appointmentdetail1.html">
+        <span class="doselocationtable" id="doselocationid"></span>
+    </a>
+    <a href="appointmentdetail1.html">
+        <span class="detailappointmenttable" id="dosedetailid"></span>
+    </a>
 </div>
 
 <script src="main2.js" type="text/javascript"></script>
