--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 		<label for="andrewid">Andrew ID</label><br>
 		<input class="logintextfield" type="text" id="andrewid" name=andrewid><br>
 		<label for="password">Password</label><br>
-		<input class="logintextfield" type="text" id="password" name="password">
-		<p class="forgotpassword"> Forgot Password? </p>
+		<input class="logintextfield" type="text" id="password" name="password"><br><br>
+    	<button type=button onclick="emailfaq()">Reset Password or Ask Questions</button><br><br>
 		<a href="appointments.html">
 			<button class="button" type="button"> LOGIN </button>
 		</a>
