--- a/makeappointment1.html
+++ b/makeappointment1.html
@@ -50,7 +50,7 @@
     <input onclick="addVaccineBrand()" type="radio" id="testd" name="vaccinebrand" value="COVID-19 Antibody Test">
     <label for="testd">COVID-19 Antibody Test</label>
     <br><br>
-    <label class="appointmentformheader" for="dosedate">Select dose date:<label>
+    <label class="appointmentformheader" for="dosedate">Select appointment date:<label>
         <select name="bookappointmentdate" id="dosedate" onclick="selectVaccineBrand()">
              <option value="January 30, 2022">January 30, 2022 </option>
              <option value="January 31, 2022">January 31, 2022</option>
@@ -59,7 +59,7 @@
              <option value="February 3, 2022">February 3, 2022 </option>
              <option value="February 4, 2022">February 4, 2022</option>
         </select><br><br>
-    <label class="appointmentformheader" for="dosetime">Select dose time:<label>
+    <label class="appointmentformheader" for="dosetime">Select appointment time:<label>
         <select name="bookappointmentdate" id="dosetime">
              <option value="10:00 AM">10:00 AM </option>
              <option value="10:30 AM">10:30 AM</option>
