organizing assets and relinking images

--- a/appointmentdetail1.html
+++ b/appointmentdetail1.html
@@ -12,14 +12,14 @@
 
 <!--- return to upcoming appointments -->
 <div class="goback">
-    <a href="appointments.html"> <img class="backbuttonicon" alt="back button" src="back-button.png"></a>
+    <a href="appointments.html"> <img class="backbuttonicon" alt="back button" src="Assets/back-button.png"></a>
     <a href="appointments.html">Return to Upcoming Appointments</a>
 </div>
 
 <!--- navigation bar -->
 <div class="navigationbar">
     <a href="index.html">
-        <img class="logo" src="HealthConnect-Logo.png" alt="HealthConnect Logo" >
+        <img class="logo" src="Assets/HealthConnect-Logo.png" alt="HealthConnect Logo" >
     </a>
     <div class="navtabs">
         <ul>
@@ -27,7 +27,7 @@
             <a href="results.html">Results</a>
             <a>FAQs</a>
             <a>Account</a>
-            <img class="accounticon" alt="account icon" src="account-icon.png" >
+            <img class="accounticon" alt="account icon" src="Assets/account-icon.png" >
         </ul>
     </div>
 </div>
@@ -43,7 +43,7 @@
     <p class="locationheading">TCS Hall</p>
     <p>4665 Forbes Ave, Pittsburgh, PA 15213</p>
     <button onclick="cancelAppointment()" class="cancelappointment">Cancel Appointment</p>
-    <img class="tcsmap" src="tcs-map.png" alt="tcs map">
+    <img class="tcsmap" src="Assets/tcs-map.png" alt="tcs map">
 </div>
 
 <script src="main3.js" type="text/javascript"></script>
