--- a/appointments.html
+++ b/appointments.html
@@ -13,7 +13,7 @@
 <!--- navigation bar -->
 <div class="navigationbar">
     <a href="index.html">
-        <img class="logo" src="HealthConnect-Logo.png" alt="HealthConnect Logo" >
+        <img class="logo" src="Assets/HealthConnect-Logo.png" alt="HealthConnect Logo" >
     </a>
     <div class="navtabs">
         <ul>
@@ -21,7 +21,7 @@
             <a href="results.html">Results</a>
             <a>FAQs</a>
             <a>Account</a>
-            <img class="accounticon" alt="account icon" src="account-icon.png" >
+            <img class="accounticon" alt="account icon" src="Assets/account-icon.png" >
         </ul>
     </div>
 </div>
@@ -43,11 +43,11 @@
         <label for="vaccine">Vaccine</label>
         <input type="radio" id="test" name="appointmenttype" value="Test">
         <label for="test">Test</label>
-        <label for="date"> <img class="searchicons" alt="search icon" src= "calendar-icon.png"> Appointment Date:<label>
+        <label for="date"> <img class="searchicons" alt="search icon" src= "Assets/calendar-icon.png"> Appointment Date:<label>
             <select name="appointmentdate" id="date">
                 <option value="Jan 30 2022 - Dec 31 2022"> Jan 30 2022 - Dec 31 2022 </option>
              </select>
-        <label for="location"><img class="searchicons" alt="location icon" src="location-icon.png"> Appointment Location: </label>
+        <label for="location"><img class="searchicons" alt="location icon" src="Assets/location-icon.png"> Appointment Location: </label>
             <select name="appointmentlocation" id="location">
                 <option value="TCS Hall"> TCS Hall </option>
                 <option value="Baker Hall"> Baker Hall </option>
