--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!--- navogation bar -->
 <div class="navigationbar">
 	<a href="index.html">
-		<img class="logo" src="HealthConnect-Logo.png" alt="HealthConnect Logo" href="index.html">
+		<img class="logo" src="Assets/HealthConnect-Logo.png" alt="HealthConnect Logo" href="index.html">
 	</a>
 	<div class="navtabs">
 		<ul>
@@ -21,7 +21,7 @@
 			<a href="results.html">Results</a>
 			<a>FAQs</a>
 			<a>Account</a>
-			<img class="accounticon" alt="account icon" src=account-icon.png >
+			<img class="accounticon" alt="account icon" src=Assets/account-icon.png >
 		</ul>
 	</div>
 </div>
