--- a/makeappointment1.html
+++ b/makeappointment1.html
@@ -18,7 +18,7 @@
 <!--- navigation bar -->
 <div class="navigationbar">
     <a href="index.html">
-        <img class="logo" src="HealthConnect-Logo.png" alt="HealthConnect Logo" >
+        <img class="logo" src="Assets/HealthConnect-Logo.png" alt="HealthConnect Logo" >
     </a>
     <div class="navtabs">
         <ul>
@@ -26,7 +26,7 @@
             <a href="results.html">Results</a>
             <a>FAQs</a>
             <a>Account</a>
-            <img class="accounticon" alt="account icon" src="account-icon.png" >
+            <img class="accounticon" alt="account icon" src="Assets/account-icon.png" >
         </ul>
     </div>
 </div>
