relinking visual assets

--- a/results.html
+++ b/results.html
@@ -13,7 +13,7 @@
 <!--- navigation bar -->
 <div class="navigationbar">
     <a href="index.html">
-        <img class="logo" src="HealthConnect-Logo.png" alt="HealthConnect Logo" >
+        <img class="logo" src="Assets/HealthConnect-Logo.png" alt="HealthConnect Logo" >
     </a>
     <div class="navtabs">
         <ul>
@@ -21,7 +21,7 @@
             <a class="currentpage">Results</a>
             <a>FAQs</a>
             <a>Account</a>
-            <img class="accounticon" alt="account icon" src="account-icon.png" >
+            <img class="accounticon" alt="account icon" src="Assets/account-icon.png" >
         </ul>
     </div>
 </div>
