adding changes to forgot password functionality

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		<input class="logintextfield" type="text" id="andrewid" name=andrewid><br>
 		<label for="password">Password</label><br>
 		<input class="logintextfield" type="text" id="password" name="password"><br><br>
-    	<button type=button onclick="emailfaq()">Reset Password or Ask Questions</button><br><br>
+    	<button type=button onclick="emailfaq()">Reset Password</button><br><br>
 		<a href="appointments.html">
 			<button class="button" type="button"> LOGIN </button>
 		</a>
