adding user profile object

--- a/appointments.html
+++ b/appointments.html
@@ -28,11 +28,11 @@
 
 <!--- appointment title and header -->
 <div class="appointmentheader">
-    <h1>Appointments</h1>
-    <p>Schedule a COVID-19 vaccine or COVID-19 antibody test</p>
+    <h1 id='name'></h1>
+    <p id="lastappointmentdate"></p>
     <form>
         <a href="makeappointment1.html">
-            <button class="button" type=button>MAKE AN APPOINTMENT</button>
+            <button class="button" type=button>SCHEDULE A COVID-19 VACCINE OR TEST</button>
         </a>
 </div>
 
